# rust-sec-fetcher

./: .gitignore  Cargo.toml  DRAFT-README.md  DRAFT-UTIL.md  DRAFT.md  NOTICE.md  README.md  deny.toml  sec_fetcher_config.toml.example
.github/workflows/: rust-lint.yml  rust-tests.yml  rust-tests.yml.TODO  us-gaap-store-integration-test.yml
examples/: 8k_exhibits_as_markdown.rs  8k_full_render.rs  8k_list.rs  8k_render.rs  8k_render_body.rs  8k_render_exhibits.rs  cik_show.rs  column_distribution.rs  company_profile.rs  company_search.rs  company_show.rs  config.rs  config_show.rs  credential_manager.rs  dl_inv_series_and_class.rs  edgar_feed_poll.rs  edgar_firehose.rs  edgar_index_browse.rs  entity_history.rs  filing_render.rs  filing_show.rs  full_index.rs  fund_series_list.rs  funds.rs  fuzzy_match_company.rs  holdings_history.rs  holdings_show.rs  ipo_list.rs  ipo_show.rs  latest_8k_as_markdown.rs  list_8k_filings.rs  list_all_tickers.rs  list_operating_company_tickers.rs  locate_us_gaap_values.rs  lookup_cik.rs  lookup_company_fundamentals.rs  lookup_company_ticker.rs  lookup_fund_cik.rs  n_port_filing.rs  nport_filing.rs  (+9 more)
python/: .gitignore  STAGE_1_PREP.md  docker-compose.yml  requirements.txt  stage_1_training_temp.py
python/db/: __init__.py  config.py  db.py  db_connector.py  db_us_gaap.py  schema.sql
python/narrative_stack/: .env.example  .env.test  .gitattributes  .gitignore  Dockerfile.simd-r-drive-ci-server  README.md  STAGE_1_PREP.md  docker-compose.yml  main.py  pyproject.toml  stage1_train_temp.py  stage_1_temp.py  us_gaap_store_integration_test.sh
python/notebooks/: STAGE 1-3 BLUEPRINT (DRAFT).md  STAGE_2_NOTES.md  a_final_ingest_us_gaap_alignment.ipynb  build_multi_label_ofss_dataset.ipynb  build_us_gaap_alignment_dataset.ipynb  db_hello.ipynb  extract_us_gaap_uoms.ipynb  generate_gaap_triplets.ipynb  git_root.ipynb  hello_db.ipynb  ingest_gaap_concepts.ipynb  ingest_gaap_description_variations.ipynb  ingest_gaap_taxonomy.ipynb  ingest_ofss_schema.ipynb  ingest_us_gaap_alignment.ipynb  ingest_us_gaap_concepts.ipynb  ingest_with_ofss_ids.ipynb  locate_us_gaap_concepts.ipynb  old.generate_gaap_triplets.ipynb  old.upsert_manual_us_gaap_mappings.ipynb  old.us_gaap_statement_mapping.ipynb  stage_1.ipynb  stage_1_(less_noise).ipynb  stage_1_(less_noise; long slope).ipynb  stage_1_(less_noise_long_slope).ipynb  stage_1_(less_noise_long_slope_larger).ipynb  stage_1_(less_noise_long_slope_min_dropout).ipynb  stage_1_(no_pre_dedupe).ipynb  stage_1_2.ipynb  stage_1_preprocessing.ipynb  sync_ofss_schema.ipynb  test.ipynb  train_gaap_triplet.ipynb  train_us_gaap_classifier.ipynb  upsert_manual_us_gaap_mappings.ipynb  us_gaap_category_mapping.ipynb  us_gaap_column_analysis_and_misc.ipynb  us_gaap_statement_mapping.ipynb  us_gaap_taxonomy_converter.ipynb  us_gaap_taxonomy_downloader.ipynb
python/utils/: generate_us_gaap_descripton.py
scripts/: tenk_raw_to_parquet.py
sec-fetcher-shared/: Cargo.toml  README.md
sec-fetcher-shared/src/: lib.rs
sec-fetcher-tenk-item-audit/: Cargo.toml
sec-fetcher-tenk-item-audit/src/: lib.rs
sec-fetcher-test-fixtures/: Cargo.toml  README.md
sec-fetcher-test-fixtures/tests/: cik_lineage_tests.rs  cik_submissions_tests.rs  fetch_10k_amendment_tests.rs  fetch_10k_dedup_tests.rs  form_type_tests.rs  parse_company_tickers_tests.rs  parse_form4_xml_tests.rs  parse_master_idx_tests.rs  registration_filings_tests.rs  tenk_sections_tests.rs  thirteenf_era_fixture_tests.rs  us_gaap_parser_accuracy_tests.rs
sec-fetcher-test-fixtures/tests/common/: mod.rs
shared/: open_financial_statement_schema.json
src/: accessor.rs  accessors.rs  caches.rs  config.rs  df_accessors.rs  enums.rs  fs.rs  lib.rs  main.rs  main.rs.old  models.rs  network.rs  parsers.rs  transformers.rs  utils.rs
src/accessor/: TODO.balance-sheet-balancing.md  distill_us_gaap_fundamental_concepts.rs  get_cik_by_ticker_symbol.rs  get_us_gaap_human_readable_mapping.rs
src/accessors/: TODO.md  distill_us_gaap_fundamental_concepts.rs  get_cik_by_company_name.rs  get_cik_by_ticker_symbol.rs  get_company_cik_by_ticker_symbol.rs  get_fund_cik_by_ticker_symbol.rs
src/calcs/: TODO.balance-sheet-balancing.md
src/config/: app_config.rs  config_manager.rs  credential_manager.rs
src/df_accessors/: get_company_cik_by_ticker_symbol.rs
src/enums/: TODO.command_enum.md  cache_namespace_prefix_enum.rs  form_type_enum.rs  fundamental_concept_enum.rs  tenk_item_enum.rs  ticker_origin_enum.rs  url_enum.rs
src/fs/: write_file.rs
src/models/: accession_number.rs  cik.rs  cik_submission.rs  company_profile.rs  company_ticker.rs  feed_entry.rs  filing_document.rs  form4_transaction.rs  investment_company.rs  master_index_entry.rs  nport_investment.rs  sic_code.rs  thirteenf_holding.rs  ticker.rs  ticker_symbol.rs
src/network/: credential_manager.rs  fetch_10k_sections.rs  fetch_13f_filing.rs  fetch_8k_filings.rs  fetch_and_render.rs  fetch_cik_submissions.rs  (+20 more)
tests/: accession_number_tests.rs  cache_namespace_prefix_tests.rs  cik_formatter_tests.rs  cik_formatting_tests.rs  cik_lineage_tests.rs  cik_submissions_tests.rs  cik_tests.rs  company_profile_tests.rs  config_manager_tests.rs  distill_us_gaap_fundamental_concepts_tests.rs  edgar_feed_tests.rs  feed_entry_tests.rs  filing_document_tests.rs  filing_view_tests.rs  form4_transaction_tests.rs  form_type_tests.rs  fundamental_concept_tests.rs  holdings_tests.rs  human_readable_us_gaap_mapping_tests.rs  interactive_mode_tests.rs  investment_company_tests.rs  network_fetch_tests.rs  parse_13f_xml_tests.rs  parse_company_tickers_tests.rs  parse_form4_xml_tests.rs  parse_investment_companies_csv_tests.rs  parse_master_idx_tests.rs  parse_nport_xml_tests.rs  parser_accuracy_tests.rs  rate_limit_tests.rs  registration_filings_tests.rs  rendering_tests.rs  sec_client_network_tests.rs  sec_client_tests.rs  sec_client_tests.rs-TODO  sic_code_tests.rs  tenk_sections_tests.rs  thirteenf_era_fixture_tests.rs  ticker_fuzzy_match_tests.rs  ticker_origin_tests.rs  (+5 more)
us-gaap-dist-analyzer/: Cargo.toml
us-gaap-dist-analyzer/src/: main.rs
(+186 files in other folders)
